branches/5.1: Fix bug#29507 TRUNCATE shows to many rows effected

In InnoDB, the row count is only a rough estimate used by SQL
optimization. InnoDB is now return row count 0 for TRUNCATE operation.